--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>mohamed tarek</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sea.css">
     <script src="http://kit.fontawesome.com/1fc4ea1c6a.js" crossorigin="anonymous"></script>
   </head>
   <body>
